# pathfinder-robot

./: CMakeLists.txt  Comenzi  Dockerfile  README.md  main.c  module1.c  module1.h  todo
controllers/: Makefile  README.md  README.txt  Untitled Diagram.drawio
controllers/Comenzi/: CMakeLists.txt  Comenzi  Makefile  README.txt  logic.c  main.c  module1.h  movement.c  odometry.c  script.sh  script.txt  sensors.c  todo
controllers/Comenzi/headers/: logic.h  movement.h  odometry.h  sensors.h
controllers/Comenzi/src/: main.c  modules.h  movement.c
controllers/Comenzi/webots/: README.md
worlds/: 001.wbt  002.wbt  README.md
